--- a/SistemaCine/SistemaCine.cbp
+++ b/SistemaCine/SistemaCine.cbp
@@ -34,14 +34,11 @@
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="milibreria.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="milibreria.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
 			<debugger />
+			<lib_finder disable_auto="1" />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
