--- a/SistemaCine/minunit_cine/minunit_cine.cbp
+++ b/SistemaCine/minunit_cine/minunit_cine.cbp
@@ -31,9 +31,11 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="../milibreria.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="minunits.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
